[project]
name = "alatheme"
version = "1.0.0"
authors = [
	{ name = "Daniel" },
]
description = "A theme manager for alacritty"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/danielosw/alatheme"
Issues = "https://github.com/danielosw/alatheme"
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
